testsuite/tests/properties/invalid_predicate/ok_no_default_var.lkt
import common

class Example: BaseExample {
    @exported fun prop(): Entity[FooNode] = {
        val _ = %predicate(Example.pred1, node.var1, node.var2);
        node.as_bare_entity
    }
}
